--- a/project.private.config.json
+++ b/project.private.config.json
@@ -1,6 +1,6 @@
 {
     "setting": {
-        "compileHotReLoad": true
+        "compileHotReLoad": false
     },
     "condition": {
         "miniprogram": {
