--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -3,24 +3,23 @@
     "pages/square/square",
     "pages/publish/publish",
     "pages/shops/shops",
-    "pages/shops-detail/shops-detail",
     "pages/mine/mine",
     "pages/square-detail/square-detail"
   ],
   "window": {
-    "enablePullDownRefresh": false,
+    "enablePullDownRefresh": true,
     "onReachBottomDistance": 50,
     "backgroundColor": "#ffffff",
     "backgroundTextStyle": "dark",
-    "navigationBarBackgroundColor": "#FFE3CD",
-    "navigationBarTitleText": "",
+    "navigationBarBackgroundColor": "#ffc8b4",
+    "navigationBarTitleText": "珈有好食",
     "navigationBarTextStyle": "black"
   },
   "sitemapLocation": "sitemap.json",
   "style": "v2",
 
   "tabBar": {
-      "backgroundColor": "#463124",
+      "backgroundColor": "#996600",
       "borderStyle": "black",
       "color": "#000000",
       "selectedColor": "#ffffff",
@@ -28,26 +27,26 @@
           {
               "pagePath": "pages/square/square",
               "text": "广场",
-              "iconPath": "./images1/评论.png",
-              "selectedIconPath": "./images1/评论 (1).png"
+              "iconPath": "./images/评论.png",
+              "selectedIconPath": "./images/评论 (1).png"
           },
           {
               "pagePath": "pages/publish/publish",
               "text": "发布",
-              "iconPath": "./images1/编辑.png",
-              "selectedIconPath": "./images1/编辑 (1).png"
+              "iconPath": "./images/编辑.png",
+              "selectedIconPath": "./images/编辑 (1).png"
           },
           {
               "pagePath": "pages/shops/shops",
               "text": "店铺",
-              "iconPath": "./images1/首页.png",
-              "selectedIconPath": "./images1/首页 (1).png"
+              "iconPath": "./images/首页.png",
+              "selectedIconPath": "./images/首页 (1).png"
           },
           {
               "pagePath": "pages/mine/mine",
               "text": "我的",
-              "iconPath": "./images1/我的.png",
-              "selectedIconPath": "./images1/我的 (1).png"
+              "iconPath": "./images/我的.png",
+              "selectedIconPath": "./images/我的 (1).png"
           }
       ]
   }
