--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -7,7 +7,8 @@
         "pages/mine/mine",
         "pages/square-detail/square-detail",
         "pages/collection/collection",
-        "pages/help/help"
+        "pages/help/help",
+        "pages/changeName/changeName"
     ],
     "window": {
         "enablePullDownRefresh": false,
