--- a/project.private.config.json
+++ b/project.private.config.json
@@ -80,6 +80,13 @@
                     "query": "",
                     "launchMode": "default",
                     "scene": null
+                },
+                {
+                    "name": "登录",
+                    "pathName": "pages/login/login",
+                    "query": "",
+                    "launchMode": "default",
+                    "scene": null
                 }
             ]
         }
