prevent none-login

--- a/miniprogram/package.json
+++ b/miniprogram/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@vant/weapp": "^1.10.8"
+    "@vant/weapp": "^1.10.8",
+    "mobx-miniprogram": "^4.13.2",
+    "mobx-miniprogram-bindings": "^1.2.1"
   }
 }
